--- a/src/html/h5_storage.html
+++ b/src/html/h5_storage.html
@@ -14,6 +14,10 @@
         sessionStorage.hits = 1;
     }
 
+    sessionStorage.setItem("sessionStorage", "test0");
+    console.log(sessionStorage.getItem('sessionStorage'));
+
+
     document.write("Total Hits:" + sessionStorage.hits);
 
     //localStorage - 没有时间限制的数据存储
@@ -22,6 +26,8 @@
     } else {
         localStorage.hits = 1;
     }
+    localStorage.setItem("localStorage", "test1");
+    console.log(localStorage.getItem('localStorage'));
 
     document.write("Total Hits :" + localStorage.hits);
 </script>
