--- a/src/js/ajax/json.html
+++ b/src/js/ajax/json.html
@@ -15,6 +15,7 @@
     $(document).ready(function () {
         $.ajax({
             url: 'http://localhost:8002/listUsers',
+//            url: 'http://localhost:63343/',
             method: 'GET',
             success: function (data) {
                 p.innerHTML = JSON.stringify(data);
