--- a/src/js/video/closures.html
+++ b/src/js/video/closures.html
@@ -11,12 +11,12 @@
     document.body.innerHTML = '<div id="div1">aaa</div>' +
             '<div id="div2">bbb</div>';
 
-    for (var i = 1; i < 3; i++) {
-        document.getElementById('div' + i)
-                .addEventListener('click', function () {
-                    alert(i);///33
-                })
-    }
+//    for (var i = 1; i < 3; i++) {
+//        document.getElementById('div' + i)
+//                .addEventListener('click', function () {
+//                    alert(i);///33
+//                })
+//    }
 
     for (var i = 1; i < 3; i++) {
         !function (i) {
