--- a/src/interview/一道常被人轻视的前端面试题.html
+++ b/src/interview/一道常被人轻视的前端面试题.html
@@ -30,29 +30,36 @@
     }
 
     //请写出以下输出结果：
-    Foo.getName();//2
-    getName();//4 变量声明提升，函数表达式
-    Foo().getName();//1 Foo函数中的 getName将外层作用域的getName函数修改了，而this指向window
-    getName();//1 等于window.getName()
-    new Foo.getName();//2
-    new Foo().getName();//3
-    new new Foo().getName();//3
-
+        Foo.getName();//2
+        getName();//4 变量声明提升，函数表达式
+        Foo().getName();//1 Foo函数中的 getName将外层作用域的getName函数修改了，而this指向window
+        getName();//1 等于window.getName()
+        new Foo.getName();//2
+        new Foo().getName();//3
+        new new Foo().getName();//3
 
 
     // http://www.cnblogs.com/xxcanghai/p/4991870.html
-    function fun(n,o) {
+    function fun(n, o) {
         console.log(o)
         return {
-            fun:function(m){
-                return fun(m,n);
+            f: function (m) {
+                return fun(m, n);
             }
         };
     }
-    var a = fun(0);  a.fun(1);  a.fun(2);  a.fun(3);//undefined,?,?,?
-    var b = fun(0).fun(1).fun(2).fun(3);//undefined,?,?,?
-    var c = fun(0).fun(1);  c.fun(2);  c.fun(3);//undefined,?,?,?
+    var a = fun(0);//undefined
+    a.f(1);//0
+    a.f(2);//0
+    a.f(3);//0
+    var b = fun(0).f(1).f(2).f(3);//undefined,0,1,2
+    var c = fun(0).f(1);
+    c.f(2);
+    c.f(3);//undefined,0,1,1
     //问:三行a,b,c的输出分别是什么？
+
+
+
 </script>
 </body>
 </html>
