--- a/src/test/settimeout.html
+++ b/src/test/settimeout.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 <script>
+    setTimeout("alert('a')", 0);
 
-    alert(1);
-    setTimeout("alert(2)", 0);
-    alert(3);
+    for (var i = 0; i < 10; i++) {
+        alert(i)
+    }
 
 </script>
 </body>
