--- a/src/interview/汤姆大叔.html
+++ b/src/interview/汤姆大叔.html
@@ -11,7 +11,7 @@
 
 
 
-    //    找出数字数组中最大的元素（使用Match.max函数）
+    //    找出数字数组中最大的元素（使用Math.max函数）
     console.log(Math.max.apply(null, [1, 2, 3, 4, 5, 6, 8, 7]));
 
 
