--- a/src/interview/数组去重.html
+++ b/src/interview/数组去重.html
@@ -6,19 +6,50 @@
 </head>
 <body>
 <script>
+    // Array.prototype.indexOf()
     function unique(arr) {
-
         return arr.filter(function (item, index, array) {
             // indexOf()方法返回给定元素能找在数组中找到的第一个索引值
             return array.indexOf(item) === index;
         });
     }
 
+    // Set
     function uniqueES6(arr) {
         return Array.from(new Set(arr));
     }
 
-    var result = unique([1, 1, '1', '2', 1]);
+    // Array.prototype.includes()
+    function unique2(arr) {
+        var ret = [];
+        arr.forEach(function (item) {
+            if (!ret.includes(item)) {
+                ret.push(item);
+            }
+        });
+        return ret;
+    }
+
+    // 双重循环
+    function unique3(arr) {
+        var res = [];
+        var isRepeat;
+        for (var i = 0; i < arr.length; i++) {
+            isRepeat = false;
+            for (var j = i + 1; j < arr.length; j++) {
+                if (arr[i] === arr[j]) {
+                    isRepeat = true;
+                    break;
+                }
+            }
+            if (!isRepeat) {
+                res.push(arr[i]);
+            }
+        }
+        return res;
+    }
+
+    var result = unique3([1, 1, '1', '2', 1]);
     console.log(result)
 
     var result2 = uniqueES6([1, 1, '1', '2', 1]);
