--- a/src/interview/cichi10problem.html
+++ b/src/interview/cichi10problem.html
@@ -70,10 +70,10 @@
     console.log(s.pro + s);//undefinedhello
 
     //6 函数声明优于变量声明
-    console.log(typeof fn);//function
-    function fn() {
+    console.log(typeof fn1);//function
+    function fn1() {
     }
-    var fn;
+    var fn1=1;
 
     //7
     function theMost(str) {
