--- a/src/interview/一道常被人轻视的前端面试题.html
+++ b/src/interview/一道常被人轻视的前端面试题.html
@@ -6,10 +6,7 @@
 </head>
 <body>
 <script>
-    // 代码是给人看的，少用奇巧淫技
-
     // http://www.cnblogs.com/xxcanghai/p/5189353.html#!comments
-
     function Foo() {
         getName = function () {
             alert(1);
@@ -29,14 +26,25 @@
         alert(5);
     }
 
+
     //请写出以下输出结果：
-        Foo.getName();//2
-        getName();//4 变量声明提升，函数表达式
-        Foo().getName();//1 Foo函数中的 getName将外层作用域的getName函数修改了，而this指向window
-        getName();//1 等于window.getName()
-        new Foo.getName();//2
-        new Foo().getName();//3
-        new new Foo().getName();//3
+    Foo.getName();//
+    getName();//
+    Foo().getName();//
+    getName();//
+    new Foo.getName();
+    new Foo().getName();
+    new new Foo().getName();
+
+
+    //请写出以下输出结果：
+    Foo.getName();//2
+    getName();//4 变量声明提升，函数表达式
+    Foo().getName();//1 Foo函数中的 getName将外层作用域的getName函数修改了，而this指向window
+    getName();//1 等于window.getName()
+    new Foo.getName();//2
+    new Foo().getName();//3
+    new new Foo().getName();//3
 
 
     // http://www.cnblogs.com/xxcanghai/p/4991870.html
@@ -57,7 +65,6 @@
     c.f(2);
     c.f(3);//undefined,0,1,1
     //问:三行a,b,c的输出分别是什么？
-
 
 
 </script>
