--- a/src/js/dashboard/dashboard2.html
+++ b/src/js/dashboard/dashboard2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>dashboard</title>
-    <script type="text/javascript" src="jquery-3.1.0.js"></script>
+    <script type="text/javascript" src="../ajax/jquery-3.1.0.js"></script>
     <script src="//cdn.bootcss.com/echarts/3.2.3/echarts.common.min.js"></script>
     <link rel="stylesheet" href="style.css">
 
