--- a/src/a.html
+++ b/src/a.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>visible</title>
 </head>
+<style>
+
+</style>
 <body>
+
 <script>
-    console.log(location)
+
 </script>
+
 </body>
 </html>
