--- a/src/a.html
+++ b/src/a.html
@@ -5,13 +5,19 @@
     <title>visible</title>
 </head>
 <style>
-
+    div {
+        margin: 0;
+        font-size: 15px;
+        background: -webkit-linear-gradient(top, #000000, #fef9ff);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
 </style>
 <body>
-
-<script>
-
-</script>
-
+<div>
+    <p>123</p>
+    <p>123</p>
+    <p>123</p>
+</div>
 </body>
 </html>
