--- a/src/interview/是什么阻塞了dom/dom.html
+++ b/src/interview/是什么阻塞了dom/dom.html
@@ -6,9 +6,10 @@
     <!--如果你追求一个完全没有阻塞的CSS，那么你的唯一选项就是：在HTML中内联嵌入你的CSS-->
     <!--减少CSS的数量-->
     <!--Minify CSS-->
-    <link href="style.css" rel="stylesheet">
+    <!--<link href="style.css" rel="stylesheet">-->
+    <link href="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css" rel="stylesheet">
     <!--DOMContentLoaded 2.08s Load 2.08s-->
-    <script src="a.js"></script>
+    <!--<script src="a.js"></script>-->
     <!--DOMContentLoaded 103ms Load 2.08s-->
     <!--<script async src="a.js"></script>-->
 </head>
@@ -17,9 +18,11 @@
     <div>
         <p>123</p>
     </div>
-    <div>
-        <p>123</p>
-    </div>
+
+    <p>Hello <span>web performance</span> students!</p>
+
+    <!--<script src="https://cdn.bootcss.com/angular.js/2.0.0-beta.17/angular2.js"></script>-->
+
     <div>
         <p>123</p>
     </div>
