--- a/src/interview/x.html
+++ b/src/interview/x.html
@@ -28,10 +28,10 @@
 
 
     //请写出以下输出结果：
-    Foo.getName();//
-    getName();//
-    Foo().getName();//
-    getName();//
+    Foo.getName();//2
+    getName();//4
+    Foo().getName();//1
+    getName();//1
     new Foo.getName();
     new Foo().getName();
     new new Foo().getName();
