--- a/src/js/dashboard/demo/index.html
+++ b/src/js/dashboard/demo/index.html
@@ -3,68 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title>dashboard</title>
-    <script type="text/javascript" src="./jquery-3.1.0.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="//cdn.bootcss.com/echarts/3.2.3/echarts.common.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!--加载中-->
-<!--<div class="loader">-->
-<!--<h2>loading...</h2>-->
-<!--<span></span>-->
-<!--<span></span>-->
-<!--<span></span>-->
+<!--<button type="text" class="button buttonBlue openb">Sign Out-->
+    <!--<div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>-->
+<!--</button>-->
+
+<!--<div class="login-modal-overlay">-->
+
+    <!--<div class="login-modal">-->
+        <!--<h2>Sign In</h2>-->
+        <!--<input type="text" placeholder="username" required>-->
+        <!--<input type="password" placeholder="password" required>-->
+        <!--<button type="submit" class="button">Login</button>-->
+    <!--</div>-->
+
 <!--</div>-->
 
-<div id="container">
 
-    <!--选择学校-->
-    <!--<div id="school-list-container">-->
-    <!--<select id="school-list">-->
-    <!--</select>-->
-    <!--</div>-->
+<div id="container">
 
     <ul id="centre-list"></ul>
 
     <!--图表-->
     <div class="chart">
-        <h2>Student Count</h2>
+        <h2 class="title">Student Count</h2>
         <div id="main"></div>
     </div>
 
     <div class="chart">
-        <h2>New Enrollment</h2>
+        <h2 class="title">New Enrollment</h2>
         <div id="enrolled"></div>
     </div>
 
     <div class="chart">
-        <h2>Withdrawn</h2>
+        <h2 class="title">Withdrawn</h2>
         <div id="withdrawn"></div>
     </div>
 
     <div class="chart">
-        <h2>Enquiry</h2>
+        <h2 class="title">Enquiry</h2>
         <div id="enquiry"></div>
     </div>
 
 </div>
 
-<!--<div id="data-view" class="modal">-->
-
-<!--&lt;!&ndash;弹出层&ndash;&gt;-->
-<!--<div class="modal-content">-->
-<!--<div class="modal-header">-->
-<!--<span class="close">&times;</span>-->
-<!--</div>-->
-<!--<div id="modal-body">-->
-
-<!--</div>-->
-<!--</div>-->
-
-<!--</div>-->
-
 </body>
-<script src="./build2.js"></script>
+<script src="./build.js"></script>
 </body>
 </html>
